--- a/index.docbook
+++ b/index.docbook
@@ -4,22 +4,22 @@
  <!ENTITY kappname "&kipi;">
  <!ENTITY doc-acquireimages SYSTEM "acquireimages.docbook">
  <!ENTITY doc-borderimages SYSTEM "borderimages.docbook">
+ <!ENTITY doc-calendar SYSTEM "calendar.docbook">
+ <!ENTITY doc-cdarchiving SYSTEM "cdarchiving.docbook">
  <!ENTITY doc-colorimages SYSTEM "colorimages.docbook">
  <!ENTITY doc-convertimages SYSTEM "convertimages.docbook">
  <!ENTITY doc-effectimages SYSTEM "effectimages.docbook">
  <!ENTITY doc-filterimages SYSTEM "filterimages.docbook">
- <!ENTITY doc-recompressimages SYSTEM "recompressimages.docbook">
- <!ENTITY doc-renameimages SYSTEM "renameimages.docbook">
- <!ENTITY doc-resizeimages SYSTEM "resizeimages.docbook">
- <!ENTITY doc-calendar SYSTEM "calendar.docbook">
- <!ENTITY doc-cdarchiving SYSTEM "cdarchiving.docbook">
  <!ENTITY doc-findduplicateimages SYSTEM "findduplicateimages.docbook">
- <!ENTITY doc-kameraklient SYSTEM "kameraklient.docbook">
  <!ENTITY doc-imagesgallery SYSTEM "imagesgallery.docbook">
  <!ENTITY doc-jpeglossless SYSTEM "jpeglossless.docbook">
+ <!ENTITY doc-kameraklient SYSTEM "kameraklient.docbook">
  <!ENTITY doc-mpegencoder SYSTEM "mpegencoder.docbook">
  <!ENTITY doc-printwizard SYSTEM "printwizard.docbook">
  <!ENTITY doc-rawconverter SYSTEM "rawconverter.docbook">
+ <!ENTITY doc-recompressimages SYSTEM "recompressimages.docbook">
+ <!ENTITY doc-renameimages SYSTEM "renameimages.docbook">
+ <!ENTITY doc-resizeimages SYSTEM "resizeimages.docbook">
  <!ENTITY doc-sendimages SYSTEM "sendimages.docbook">
  <!ENTITY doc-slideshow SYSTEM "slideshow.docbook">
  <!ENTITY doc-timeadjust SYSTEM "timeadjust.docbook">
@@ -32,19 +32,21 @@
 <title>The Kipi Plugins Handbook</title>
 
 <authorgroup>
-<author>
-<firstname>Gilles</firstname>
-<surname>Caulier</surname>
-<affiliation>
-<address><email>caulier dot gilles at free.fr</email></address>
-</affiliation>
-</author>
+    <author>
+        <firstname>Gilles</firstname><surname>Caulier</surname>
+        <affiliation><address><email>caulier_dot_gilles_at_free.fr</email></address></affiliation>
+    </author>
+    
+    <author>
+        <firstname>Gerhard</firstname><surname>Kulzer</surname>
+        <affiliation><address><email>gerhard_at_kulzer.net</email></address></affiliation>
+    </author>
 </authorgroup>
 
 <!-- TRANS:ROLES_OF_TRANSLATORS -->
 
-<date>2004-06-20</date>
-<releaseinfo>1.00.00</releaseinfo> <!-- Used Kicker version here -->
+<date>2004-12-xx</date>
+<releaseinfo>0.1</releaseinfo> <!-- Used Kicker version here -->
 
 <copyright>
 <year>2004</year>
@@ -93,6 +95,12 @@ The plugins installed in this handbook are:
 <para><link linkend="borderimages">Border Images plugin</link></para>
 </listitem>
 <listitem>
+<para><link linkend="calendar">Calendar plugin</link></para>
+</listitem>
+<listitem>
+<para><link linkend="cdarchiving">CD Archiving plugin</link></para>
+</listitem>
+<listitem>
 <para><link linkend="colorimages">Color Images plugin</link></para>
 </listitem>
 <listitem>
@@ -105,28 +113,16 @@ The plugins installed in this handbook are:
 <para><link linkend="filterimages">Filter Images plugin</link></para>
 </listitem>
 <listitem>
-<para><link linkend="recompressimages">Recompress Images plugin</link></para>
-</listitem>
-<listitem>
-<para><link linkend="renameimages">Rename Images plugin</link></para>
-</listitem>
-<listitem>
-<para><link linkend="resizeimages">Resize Images plugin</link></para>
-</listitem>
-<listitem>
-<para><link linkend="cdarchiving">CD Archiving plugin</link></para>
-</listitem>
-<listitem>
 <para><link linkend="findduplicateimages">Find Duplicate Images plugin</link></para>
-</listitem>
-<listitem>
-<para><link linkend="kameraklient">Digital camrera client plugin</link></para>
 </listitem>
 <listitem>
 <para><link linkend="imagesgallery">Images Gallery plugin</link></para>
 </listitem>
 <listitem>
 <para><link linkend="jpeglossless">JPEG Loss Less plugin</link></para>
+</listitem>
+<listitem>
+<para><link linkend="kameraklient">Digital camrera client plugin</link></para>
 </listitem>
 <listitem>
 <para><link linkend="mpegencoder">MPEG Encoder plugin</link></para>
@@ -136,6 +132,15 @@ The plugins installed in this handbook are:
 </listitem>
 <listitem>
 <para><link linkend="rawconverter">Raw Converter plugin</link></para>
+</listitem>
+<listitem>
+<para><link linkend="recompressimages">Recompress Images plugin</link></para>
+</listitem>
+<listitem>
+<para><link linkend="renameimages">Rename Images plugin</link></para>
+</listitem>
+<listitem>
+<para><link linkend="resizeimages">Resize Images plugin</link></para>
 </listitem>
 <listitem>
 <para><link linkend="sendimages">Send Images plugin</link></para>
@@ -154,22 +159,22 @@ The plugins installed in this handbook are:
 
 &doc-acquireimages;
 &doc-borderimages;
+&doc-calendar;
+&doc-cdarchiving;
 &doc-colorimages;
 &doc-convertimages;
 &doc-effectimages;
 &doc-filterimages;
-&doc-recompressimages;
-&doc-renameimages;
-&doc-resizeimages;
-&doc-calendar;
-&doc-cdarchiving;
 &doc-findduplicateimages;
-&doc-kameraklient;
 &doc-imagesgallery;
 &doc-jpeglossless;
+&doc-kameraklient;
 &doc-mpegencoder;
 &doc-printwizard;
 &doc-rawconverter;
+&doc-recompressimages;
+&doc-renameimages;
+&doc-resizeimages;
 &doc-sendimages;
 &doc-slideshow;
 &doc-timeadjust;
