--- a/cdarchiving.docbook
+++ b/cdarchiving.docbook
@@ -16,7 +16,7 @@
 <releaseinfo>0.1</releaseinfo>
 <abstract>
 <para>
-The Kipi CD archiving plugin is a tool for to backup the Albums.
+The Kipi CD archiving plugin is a tool to backup image collections.
 </para>
 </abstract>
 
