--- a/convertimages.docbook
+++ b/convertimages.docbook
@@ -16,7 +16,7 @@
 <releaseinfo>0.1</releaseinfo>
 <abstract>
 <para>
-The Kipi convert images plugin is a tool for to convert an image file format to another.
+The Kipi convert images plugin is a tool to convert an image file format to another.
 </para>
 </abstract>
 
